--- a/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
@@ -66,6 +66,14 @@
     <Compile Include="HeaderedTextBlock\HeaderedTextBlock.cs" />
     <Compile Include="HeaderedTextBlock\HeaderedTextBlock.Properties.cs" />
     <Compile Include="BladeControl\Blade.Events.cs" />
+    <Compile Include="MaskedTextBox\CultureTypes.cs" />
+    <Compile Include="MaskedTextBox\InsertKeyMode.cs" />
+    <Compile Include="MaskedTextBox\MaskedTextBox.cs" />
+    <Compile Include="MaskedTextBox\MaskedTextProvider.cs" />
+    <Compile Include="MaskedTextBox\MaskedTextResultHint.cs" />
+    <Compile Include="MaskedTextBox\MaskFormat.cs" />
+    <Compile Include="MaskedTextBox\MaskInputRejectedEventArgs.cs" />
+    <Compile Include="MaskedTextBox\Utils.cs" />
     <Compile Include="SlidableListItem\SwipeStatus.cs" />
     <Compile Include="SlidableListItem\SwipeStatusChangedEventArgs.cs" />
     <None Include="Microsoft.Toolkit.Uwp.UI.Controls.ruleset" />
