--- a/Microsoft.Toolkit.Uwp.Services/Microsoft.Toolkit.Uwp.Services.csproj
+++ b/Microsoft.Toolkit.Uwp.Services/Microsoft.Toolkit.Uwp.Services.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Services\Bing\BingDataProvider.cs" />
     <Compile Include="Services\Bing\BingParser.cs" />
     <Compile Include="Services\Bing\BingService.cs" />
+    <Compile Include="Services\CognitiveServices\Data\AnalyzeImageData.cs" />
     <Compile Include="Services\CognitiveServices\VisionService.cs" />
     <Compile Include="Services\CognitiveServices\Data\OcrData.cs" />
     <Compile Include="Services\CognitiveServices\Data\ImageTags.cs" />
