--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,4 +18,14 @@ init:
 - ps: git config --global core.autocrlf true
 
 build_script:
-- ps: .\build\build.ps1 publishnuget
+- ps: .\build\build.ps1 PackNuGet
+
+artifacts:
+- path: .\bin\nupkg\*.nupkg
+  
+deploy:
+  provider: NuGet
+  server: https://dotnet.myget.org/F/uwpcommunitytoolkit/api/v2/package
+  api_key:
+    secure: zdiFuDKIh6wae8N0V0rT5b8q1pQjuX/YImNWBAlyGkqS7zCfeIrEUb3up4sTuxaU
+  symbol_server: https://dotnet.myget.org/F/uwpcommunitytoolkit/symbols/api/v2/package
