--- a/Microsoft.Toolkit.Uwp.UI/Microsoft.Toolkit.Uwp.UI.csproj
+++ b/Microsoft.Toolkit.Uwp.UI/Microsoft.Toolkit.Uwp.UI.csproj
@@ -49,6 +49,13 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdvancedCollectionViewSource\AdvancedCollectionViewSource.cs" />
+    <Compile Include="AdvancedCollectionViewSource\AdvancedCollectionViewSource.Defer.cs" />
+    <Compile Include="AdvancedCollectionViewSource\AdvancedCollectionViewSource.Events.cs" />
+    <Compile Include="AdvancedCollectionViewSource\ICollectionViewEx.cs" />
+    <Compile Include="AdvancedCollectionViewSource\SortDescription.cs" />
+    <Compile Include="AdvancedCollectionViewSource\SortDirection.cs" />
+    <Compile Include="AdvancedCollectionViewSource\VectorChangedEventArgs.cs" />
     <Compile Include="Cache\CacheBase.cs" />
     <Compile Include="Cache\ImageCache.cs" />
     <Compile Include="Cache\FileCache.cs" />
