--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -125,6 +125,8 @@
     <Compile Include="Helpers\Test_WeakEventListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Test_BingService.cs" />
+    <Compile Include="UI\Person.cs" />
+    <Compile Include="UI\Test_AdvancedCollectionViewSource.cs" />
     <Compile Include="UnitTestApp.xaml.cs">
       <DependentUpon>UnitTestApp.xaml</DependentUpon>
     </Compile>
