Add a blade class marked as deprecated and add the element property marked as deprecated which sets the content

--- a/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
@@ -45,6 +45,7 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
+    <Compile Include="BladeControl\Blade.cs" />
     <Compile Include="BladeControl\BladeItem.cs" />
     <Compile Include="BladeControl\BladeItem.Properties.cs" />
     <Compile Include="BladeControl\BladeControl.cs" />
